--- a/esercitazione_11_12/package.json
+++ b/esercitazione_11_12/package.json
@@ -1,10 +1,10 @@
 {
   "name": "esercitazione_11_12",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -12,5 +12,6 @@
   "dependencies": {
     "bootstrap": "^4.6.2",
     "express": "^4.18.2"
-  }
+  },
+  "description": ""
 }
